--- a/06-Code/EuroByteWeb/nbproject/project.properties
+++ b/06-Code/EuroByteWeb/nbproject/project.properties
@@ -27,9 +27,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
-file.reference.json-simple-1.1.1-sources.jar=lib\\json-simple-1.1.1-sources.jar
-file.reference.mongo-java-driver-3.12.11.jar=lib\\mongo-java-driver-3.12.11.jar
+file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
+file.reference.json-simple-1.1.1-sources.jar=lib/json-simple-1.1.1-sources.jar
+file.reference.mongo-java-driver-3.12.11.jar=lib/mongo-java-driver-3.12.11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
