--- a/06-Code/EuroByteWebNode_API_REST/package.json
+++ b/06-Code/EuroByteWebNode_API_REST/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongodb_api_rest",
+  "name": "eurobytewebnode_api_rest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
