--- a/06-Code/EuroByteWebv2/nbproject/private/private.properties
+++ b/06-Code/EuroByteWebv2/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Isma\\AppData\\Roaming\\NetBeans\\13\\config\\PayaraEE6\\Properties\\pfv3-1544309331.properties
+deploy.ant.properties.file=C:\\Users\\rzam_\\AppData\\Roaming\\NetBeans\\13\\config\\PayaraEE6\\Properties\\pfv3814735950.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Payara/payara5/glassfish/domains/domain1
-j2ee.server.home=C:/Payara/payara5/glassfish
-j2ee.server.instance=[C:\\Payara\\payara5\\glassfish;C:\\Payara\\payara5\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
-j2ee.server.middleware=C:/Payara/payara5
-selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Isma\\AppData\\Roaming\\NetBeans\\13\\build.properties
+j2ee.server.domain=D:/Payara/payara5/glassfish/domains/domain1
+j2ee.server.home=D:/Payara/payara5/glassfish
+j2ee.server.instance=[D:\\Payara\\payara5\\glassfish;D:\\Payara\\payara5\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
+j2ee.server.middleware=D:/Payara/payara5
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+user.properties.file=C:\\Users\\rzam_\\AppData\\Roaming\\NetBeans\\13\\build.properties
