--- a/06-Code/02ServiciosWeb/EuroByteWebNode_API_REST/package.json
+++ b/06-Code/02ServiciosWeb/EuroByteWebNode_API_REST/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.8"
+    "mongoose": "^6.3.8",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
