--- a/06-Code/02ServiciosWeb/EuroByteWebNode_API_REST/package.json
+++ b/06-Code/02ServiciosWeb/EuroByteWebNode_API_REST/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "mongodb_api_rest",
+  "name": "deploy-rest-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "dev": "nodemon src/index.js --exec babel-node",
+    "build": "babel src --out-dir dist",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.8",
-    "mongoose-unique-validator": "^3.1.0"
+    "express-promise-router": "^4.1.1",
+    "mongoose": "^6.4.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/node": "^7.18.5",
+    "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.16"
   }
 }
