--- a/06-Code/03WebClient/EuroByte_React_api_front-end/eurobyte_react_api_front-end/package.json
+++ b/06-Code/03WebClient/EuroByte_React_api_front-end/eurobyte_react_api_front-end/package.json
@@ -3,13 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/core": "^5.0.0-alpha.54",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
+    "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/x-data-grid": "^5.12.3",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "animejs": "^3.2.1",
+    "axios": "0.27.2",
+    "dotenv": "^16.0.1",
+    "kill-port": "^2.0.1",
+    "material-ui-colors": "^1.0.0",
+    "material-ui-image": "^3.3.2",
+    "node-fetch": "^3.2.8",
+    "react": "18.2.0",
+    "react-animejs": "^0.5.6",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.20",
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
